@@ -1,3 +1,10 @@
+2011-05-11  Andreas K. Foerster  <info@akfoerster.de>
+
+	* lua/lua-avt.c (laudio_play, laudio_loop):
+	store reference to audio, so it isn't garbage collected while playing
+	(lavt_quit_audio, lavt_wait_audio_end, lavt_stop_audio):
+	clear stored audio-reference
+
 2011-05-05  Andreas K. Foerster  <info@akfoerster.de>
 
 	* lua/lua-avt.c (lavt_long_menu):
